--- a/mytmux/02_custom_mode/.tmuxinator.yml
+++ b/mytmux/02_custom_mode/.tmuxinator.yml
@@ -12,11 +12,11 @@ windows:
   - Simulation: 
       root: ~/
       panes:
-        - clear; source ~/.bashrc; cd /home/mr_robot/Desktop/Git/PX4-Autopilot; make px4_sitl gz_x500
+        - clear; source ~/.bashrc; cd /home/mr_robot/Desktop/Git/Drone/PX4-Autopilot; make px4_sitl_default gz_x500
   - GCS: 
       root: ~/
       panes:
-        - clear; source ~/.bashrc; cd /home/mr_robot/Desktop/Git/rom_flight_control; ./QGroundControl-x86_64.AppImage
+        - clear; source ~/.bashrc; cd /home/mr_robot/Desktop/Git/Drone; ./QGroundControl-x86_64.AppImage
   - uXRCE-DDS_Sim: 
       root: ~/
       panes:
@@ -24,8 +24,12 @@ windows:
   - sensorCombined: 
       root: ~/
       panes:
-        - clear; source ~/.bashrc; ros2 launch px4_ros_com sensor_combined_listener.launch.py
-  - TrainingNode: 
+        - clear; source ~/.bashrc; #sleep 1; ros2 launch px4_ros_com sensor_combined_listener.launch.py
+  - CustomMOde: 
       root: ~/
       panes:
-        - clear; source ~/.bashrc; ros2 run drl_px4 train_maze
+        - clear; source ~/.bashrc; sleep 3; ros2 run custom_mode custom_mode --ros-args -p trajectory_type:=figure_8
+  - Visualizer: 
+      root: ~/
+      panes:
+        - clear; source ~/.bashrc; sleep 2; ros2 launch px4_offboard visualizer.launch.py
