--- a/mytmux/02_custom_mode/.tmuxinator.yml
+++ b/mytmux/02_custom_mode/.tmuxinator.yml
@@ -12,7 +12,7 @@ windows:
   - Simulation: 
       root: ~/
       panes:
-        - clear; source ~/.bashrc; cd /home/mr_robot/Desktop/Git/Drone/PX4-Autopilot; make px4_sitl_default gz_x500
+        - clear; source ~/.bashrc; cd /home/mr_robot/PX4-Autopilot; make px4_sitl_default gz_x500
   - GCS: 
       root: ~/
       panes:
@@ -21,15 +21,11 @@ windows:
       root: ~/
       panes:
         - clear; source ~/.bashrc; MicroXRCEAgent udp4 -p 8888
-  - sensorCombined: 
-      root: ~/
-      panes:
-        - clear; source ~/.bashrc; #sleep 1; ros2 launch px4_ros_com sensor_combined_listener.launch.py
   - CustomMOde: 
       root: ~/
       panes:
-        - clear; source ~/.bashrc; sleep 3; ros2 run custom_mode custom_mode --ros-args -p trajectory_type:=figure_8
+        - clear; source ~/px4_ros2_examples_ws/install/setup.bash; sleep 3; ros2 run custom_mode custom_mode --ros-args -p trajectory_type:=figure_8
   - Visualizer: 
       root: ~/
       panes:
-        - clear; source ~/.bashrc; sleep 2; ros2 launch px4_offboard offboard_visualizer.launch.py
+        - clear; source ~/px4_ros2_examples_ws/install/setup.bash; sleep 2; ros2 launch px4_offboard offboard_visualizer.launch.py
